--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGODB_URI = 'mongodb+srv://obaka:8104055917@cluster0.8geos90.mongodb.net'
+CLERK_WEBHOOK_SECRET = 'whsec_Yyb2a8yra+WIMrxwku73izQpNlA/spE+'
